# handlers/add.go
@@ -1,15 +1,0 @@
-package handlers
-
-import (
-	"net/http"
-
-	"github.com/bugg123/golang-microservices/data"
-)
-
-func (p *Products) AddProduct(w http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle POST Products")
-
-	prod := r.Context().Value(KeyProduct{}).(*data.Product)
-	p.l.Printf("Prod: %#v", prod)
-	data.AddProduct(prod)
-}
