# handlers/post.go
@@ -1,0 +1,24 @@
+package handlers
+
+import (
+	"net/http"
+
+	"github.com/bugg123/golang-microservices/data"
+)
+
+// swagger:route POST /products products createProduct
+// Create a new product
+//
+// responses:
+//	200: productResponse
+//  422: errorValidation
+//  501: errorResponse
+
+// Create handles POST requests to add new products
+func (p *Products) Create(w http.ResponseWriter, r *http.Request) {
+	p.l.Println("Handle POST Products")
+
+	prod := r.Context().Value(KeyProduct{}).(*data.Product)
+	p.l.Printf("Prod: %#v", prod)
+	data.AddProduct(prod)
+}
